Add deploy key setup and GitHub actions variable management for stream-delta

--- a/roles/stream_delta/tasks/main.yml
+++ b/roles/stream_delta/tasks/main.yml
@@ -138,6 +138,23 @@
         group: stream-delta
         mode: "0600"
 
+    - name: Copy stream-delta deploy key - public
+      ansible.builtin.copy:
+        src: files/keys/stream-delta-deploy.pub
+        dest: "{{ stream_delta_home }}/.ssh/deploy_key.pub"
+        owner: stream-delta
+        group: stream-delta
+        mode: "0600"
+    
+    - name: Allow deploy key to log in to atoll
+      ansible.builtin.lineinfile:
+        path: "{{ stream_delta_home }}/.ssh/authorized_keys"
+        line: "{{ lookup('ansible.builtin.file', 'files/keys/stream-delta-deploy.pub' ) }}"
+        create: yes
+        owner: stream-delta
+        group: stream-delta
+        mode: "0600"
+
     - name: make sure stream-delta install dir exists
       ansible.builtin.file:
         path: "{{ stream_delta_install_dir }}"
@@ -217,7 +234,7 @@
       ansible.builtin.lineinfile:
         path: /etc/sudoers.d/stream-delta
         create: yes
-        line: "stream-delta ALL=(ALL) NOPASSWD: /bin/systemctl restart supervisor"
+        line: "stream-delta ALL=(ALL) NOPASSWD: /usr/bin/supervisorctl restart all"
         state: present
         validate: 'visudo -cf %s'
       tags:
@@ -246,6 +263,52 @@
     - stream-delta
     - stream_delta_github
   block:
+
+    - name: get list of repository variables
+      ansible.builtin.uri:
+        url: "https://api.github.com/repos/aquarion/stream-delta/actions/variables?per_page=30"
+        method: GET
+        headers:
+          Accept: "application/vnd.github.v3+json"
+          Authorization: "Bearer {{ streamdelta_github_token }}"
+          X-GitHub-Api-Version: "2022-11-28"
+        return_content: true
+      register: stream_delta_github_variables
+      changed_when: false
+
+    - name: debug variables list
+      ansible.builtin.debug:
+        var: stream_delta_github_variables.json.variables | map(attribute='name') | list
+
+    - name: Add variables to github actions workflow
+      ansible.builtin.uri:
+        url: "https://api.github.com/repos/aquarion/stream-delta/actions/variables{{ ('/' + item.name) if item.name in (stream_delta_github_variables.json.variables | map(attribute='name') | list ) else '' }}"
+        
+        method: "{{ 'PATCH' if item.name in (stream_delta_github_variables.json.variables | map(attribute='name') | list ) else 'POST' }}"
+        headers:
+          Authorization: "Bearer {{ streamdelta_github_token }}"
+          Accept: "application/vnd.github.v3+json"
+          X-GitHub-Api-Version: "2022-11-28"
+        body:
+          name: "{{ item.name }}"
+          value: "{{ item.value | string }}"
+        body_format: json
+        status_code: 200,201,204
+      loop:
+        - { name: 'DEPLOY_HOST', value: '{{ atoll_ip }}' }
+        - { name: 'DEPLOY_PATH', value: '{{ stream_delta_install_dir }}' }
+        - { name: 'DEPLOY_PORT', value: '22' }
+        - { name: 'DEPLOY_USER', value: 'stream-delta' }
+        - { name: 'PHP_VERSION', value: '{{ php_version }}' }
+        - { name: 'STREAM_DELTA_APP_URL', value: '{{ stream_delta_app_url }}' }
+        - { name: 'STREAM_DELTA_DB_HOST', value: '{{ stream_delta_db_host }}' }
+        - { name: 'STREAM_DELTA_DB_NAME', value: '{{ stream_delta_db_name }}' }
+        - { name: 'STREAM_DELTA_DB_PORT', value: '{{ stream_delta_db_port }}' }
+        - { name: 'STREAM_DELTA_DB_USER', value: '{{ stream_delta_db_user }}' }
+        - { name: 'STREAM_DELTA_APP_ID', value: '{{ stream_delta_app_id }}'}
+        - { name: 'STREAM_DELTA_REVERB_HOST', value: '{{ stream_delta_reverb_host }}'}
+        - { name: 'STREAM_DELTA_REDIS_USERNAME', value: '{{ stream_delta_redis_username }}'}
+
     - name: Get github public key for stream-delta repository
       ansible.builtin.uri:
         url: "https://api.github.com/repos/aquarion/stream-delta/actions/secrets/public-key"
@@ -280,43 +343,18 @@
           key_id: "{{ stream_delta_github_public_key.json.key_id }}"
         body_format: json
         status_code: 200,201,204
-
-        # repository: aquarion/stream-delta
-        # secret_name: "{{ item.name }}"
-        # secret_value: "{{ item.value }}"
-        # github_token: "{{ streamdelta_github_token }}"
+      no_log: true
       loop:
-        - { name: 'stream_delta_db_password', value: '{{ stream_delta_db_password }}' }
-        - { name: 'stream_delta_app_key', value: '{{ stream_delta_app_key }}' }
-        - { name: 'stream_delta_webhook_secret', value: '{{ stream_delta_webhook_secret }}' }
-        - { name: 'stream_delta_twitch_client_id', value: '{{ stream_delta_twitch_client_id }}' }
-        - { name: 'stream_delta_twitch_client_secret', value: '{{ stream_delta_twitch_client_secret }}' }
-        - { name: 'ssh_key', value: file_lookup('files/keys/stream-delta-deploy') }
-
-    - name: Add variables to github actions workflow
-      ansible.builtin.uri:
-        url: "https://api.github.com/repos/aquarion/stream-delta/actions/variables/{{ item.name }}"
-        method: PATCH
-        headers:
-          Authorization: "Bearer {{ streamdelta_github_token }}"
-          Accept: "application/vnd.github.v3+json"
-          X-GitHub-Api-Version: "2022-11-28"
-        body:
-          name: "{{ item.name }}"
-          value: "{{ item.value }}"
-        body_format: json
-        status_code: 200,201,204
-      loop:
-        - { name: 'stream_delta_db_name', value: '{{ stream_delta_db_name }}' }
-        - { name: 'stream_delta_db_user', value: '{{ stream_delta_db_user }}' }
-        - { name: 'stream_delta_db_host', value: '{{ stream_delta_db_host }}' }
-        - { name: 'stream_delta_db_port', value: '{{ stream_delta_db_port }}' }
-        - { name: 'stream_delta_app_url', value: '{{ stream_delta_app_url }}' }
-        - { name: 'DEPLOY_HOST', value: "{{ hostname }}" }
-        - { name: 'DEPLOY_USER', value: 'stream-delta' }
-        - { name: "DEPLOY_PATH", value: "{{ stream_delta_install_dir }}" }
-        - { name: "DEPLOY_PORT", value: "22" }
-        - { name: "php_package", value: "{{ php_version }}" }
+        - { name: 'STREAM_DELTA_DB_PASSWORD', value: '{{ stream_delta_db_password }}' }
+        - { name: 'STREAM_DELTA_APP_KEY', value: '{{ stream_delta_app_key }}' }
+        - { name: 'STREAM_DELTA_WEBHOOK_SECRET', value: '{{ stream_delta_webhook_secret }}' }
+        - { name: 'STREAM_DELTA_TWITCH_CLIENT_ID', value: '{{ stream_delta_twitch_client_id }}' }
+        - { name: 'STREAM_DELTA_TWITCH_CLIENT_SECRET', value: '{{ stream_delta_twitch_client_secret }}' }
+        - { name: 'SSH_KEY', value: '{{ lookup("ansible.builtin.file", "files/keys/stream-delta-deploy") }}' }
+        - { name: 'STREAM_DELTA_REVERB_APP_KEY', value: '{{ stream_delta_reverb_app_key }}'}
+        - { name: 'STREAM_DELTA_REVERB_APP_SECRET', value: '{{ stream_delta_reverb_app_secret }}'}
+        - { name: 'STREAM_DELTA_REDIS_PASSWORD', value: '{{ stream_delta_redis_password }}'}
+        - { name: 'DEPENDABOT_GITHUB_TOKEN', value: '{{ streamdelta_github_token }}'}
 
     # - name: Trigger github action to deploy stream-delta
     #   ansible.builtin.uri:
