Refactor tag naming conventions from hyphenated to underscored format for consistency across IAM, Docker, PHP, GitHub CLI, Stream Delta, and Water GKHS roles

--- a/roles/aws_pdforums/tasks/iam.yml
+++ b/roles/aws_pdforums/tasks/iam.yml
@@ -7,7 +7,7 @@
   with_items:
     - pdforums-discourse
   tags:
-    - pdforums-discourse
+    - pdforums_discourse
     - aws
 
 - name: Attach all-access S3 policy to discourse user
@@ -19,7 +19,7 @@
     policy_json: "{{ lookup('file', 'discourse-bucket-access.json') }}"
     profile: aqcom
   tags:
-    - pdforums-discourse
+    - pdforums_discourse
     - aws
 
 - name: Attach all-access S3 policy to discourse user
@@ -31,5 +31,5 @@
     profile: aqcom
     policy_json: "{{ lookup('file', 'discourse-backups-access.json') }}"
   tags:
-    - pdforums-discourse
+    - pdforums_discourse
     - aws
