Upgrade PHP to PHP8.4

--- a/roles/firth_packages/tasks/main.yml
+++ b/roles/firth_packages/tasks/main.yml
@@ -70,4 +70,5 @@
       - "{{ php_package }}-opcache"
       - "{{ php_package }}-readline"
       - "{{ php_package }}-xml"
+      - "{{ php_package }}-zip"
   tags: php
