--- a/.github/super-linter.local.env
+++ b/.github/super-linter.local.env
@@ -21,6 +21,8 @@ DEFAULT_BRANCH=main
 # FILTER_REGEX_EXCLUDE 	not set 	Regular expression defining which files will be excluded from linting (ex: .*src/test.*). Not setting this variable means to process all files. Jscpd and Checkov ignore this variable. Use their include and ignore features to select or ignore the files to lint.
 # FILTER_REGEX_INCLUDE 	not set 	Regular expression defining which files will be processed by linters (ex: .*src/.*). Not setting this variable means to process all files. FILTER_REGEX_INCLUDE is evaluated before FILTER_REGEX_EXCLUDE. Jscpd and Checkov ignore this variable. Use their include and ignore features to select or ignore the files to lint.
 
+FILTER_REGEX_EXCLUDE=^.direnv/.+$
+
 ##### Fix
 # FIX_ANSIBLE	false 	Option to enable fix mode for ANSIBLE.
 FIX_ANSIBLE=true
