Add tubular container installation and configuration tasks; remove obsolete production.env template

--- a/roles/stream_delta/handlers/main.yml
+++ b/roles/stream_delta/handlers/main.yml
@@ -7,3 +7,19 @@
     - supervisord
     - restart
     - supervisor_restart
+
+- name: Restart tubular
+  ansible.builtin.systemd:
+    name: tubular
+    state: restarted
+  tags:
+    - tubular
+    - restart
+    - tubular_restart
+
+- name: Reload systemd
+  ansible.builtin.systemd:
+    daemon_reload: yes
+  tags:
+    - systemd
+    - reload
