--- a/roles/stream_delta/tasks/main.yml
+++ b/roles/stream_delta/tasks/main.yml
@@ -424,27 +424,7 @@
         status_code: 200,201,204
       register: stream_delta_response
       changed_when: stream_delta_response.status == 201
-      loop:
-        - { name: "DEPLOY_HOST", value: "{{ atoll_ip }}" }
-        - { name: "DEPLOY_PATH", value: "{{ stream_delta_install_dir }}" }
-        - { name: "DEPLOY_PORT", value: "22" }
-        - { name: "DEPLOY_USER", value: "stream-delta" }
-        - { name: "PHP_VERSION", value: "{{ php_version }}" }
-        - { name: "NODE_VERSION", value: "{{ stream_delta_node_version }}" }
-        - { name: "STREAM_DELTA_APP_URL", value: "{{ stream_delta_app_url }}" }
-        - { name: "STREAM_DELTA_DB_HOST", value: "{{ stream_delta_db_host }}" }
-        - { name: "STREAM_DELTA_DB_NAME", value: "{{ stream_delta_db_name }}" }
-        - { name: "STREAM_DELTA_DB_PORT", value: "{{ stream_delta_db_port }}" }
-        - { name: "STREAM_DELTA_DB_USER", value: "{{ stream_delta_db_user }}" }
-        - { name: "STREAM_DELTA_APP_ID", value: "{{ stream_delta_app_id }}" }
-        - {
-            name: "STREAM_DELTA_REVERB_HOST",
-            value: "{{ stream_delta_reverb_host }}",
-          }
-        - {
-            name: "STREAM_DELTA_REDIS_USERNAME",
-            value: "{{ stream_delta_redis_username }}",
-          }
+      loop: "{{ stream_delta_github_variables }}"
 
     - name: Get github public key for stream-delta repository
       ansible.builtin.uri:
@@ -475,44 +455,7 @@
       register: stream_delta_secrets_response
       changed_when: stream_delta_secrets_response.status == 201
       no_log: true
-      loop:
-        - {
-            name: "STREAM_DELTA_DB_PASSWORD",
-            value: "{{ stream_delta_db_password }}",
-          }
-        - { name: "STREAM_DELTA_APP_KEY", value: "{{ stream_delta_app_key }}" }
-        - {
-            name: "STREAM_DELTA_WEBHOOK_SECRET",
-            value: "{{ stream_delta_webhook_secret }}",
-          }
-        - {
-            name: "STREAM_DELTA_TWITCH_CLIENT_ID",
-            value: "{{ stream_delta_twitch_client_id }}",
-          }
-        - {
-            name: "STREAM_DELTA_TWITCH_CLIENT_SECRET",
-            value: "{{ stream_delta_twitch_client_secret }}",
-          }
-        - {
-            name: "SSH_KEY",
-            value: '{{ lookup("ansible.builtin.file", "files/keys/stream-delta-deploy") }}',
-          }
-        - {
-            name: "STREAM_DELTA_REVERB_APP_KEY",
-            value: "{{ stream_delta_reverb_app_key }}",
-          }
-        - {
-            name: "STREAM_DELTA_REVERB_APP_SECRET",
-            value: "{{ stream_delta_reverb_app_secret }}",
-          }
-        - {
-            name: "STREAM_DELTA_REDIS_PASSWORD",
-            value: "{{ stream_delta_redis_password }}",
-          }
-        - {
-            name: "DEPENDABOT_GITHUB_TOKEN",
-            value: "{{ streamdelta_github_token }}",
-          }
+      loop: "{{ stream_delta_github_secrets }}"
 
   # - name: Trigger github action to deploy stream-delta
   #   ansible.builtin.uri:
